src/app/index.scss
/* ... */
.navigation-arrows {
  position: absolute;
  top: 47%;
  border: solid $primary-color;
  border-width: 0 3px 3px 0;
  padding: 3px;
  font-size: 4em;
  width: 30px;
  height: 30px;
  z-index: 12;
}

.navigation-arrow-left {
  transform: rotate(135deg);
  left: 24px;
}

.navigation-arrow-right {
  transform: rotate(-45deg);
  right: 24px;
}

.review-slideshow {
  background: linear-gradient(to bottom, #fbf9fa, #d4d2d3);
  color: gray;
  text-align: center;
  font-size: 1.5em;
  padding: 43px 12px;
  .selected {
    display: inline-block;
    width: 70%;
  }

  p {
    max-width: 800px;
    padding: 12px 0;
    text-align: left;
    display: inline-block;
    strong {
      text-transform: uppercase;
    }
  }
  img {
    display: inline-block;
    margin-right: 22px;
  }
}

.learn-more {
  max-width: 35%;
}

.services-info {
  position: relative;
  background-color: $primary-color;
  color: white;
  display: flex;
  .services-img {
    position: absolute;
    width: 33%;
    height: 100%;
    background-image: url(../images/services.jpg);
    background-size: cover;
    background-position: center center;
  }
  .services-content {
    margin-left: 33%;
    max-width: 1200px;
    height: 100%;
  }
}

.services-header {
  padding-left: 33px;
  font-size: 3em;
}

.services-row {
  display: flex;
  align-items: stretch;
}

.services-text {
  padding: 36px;
  opacity: .9;
  min-height: 360px;
  width: 50%;
}

.tennant-rep {
  background-color: $primary-color-darker-darker;
}

.landlord-rep {
  background-color: $primary-color-lighter;
}

.footer {
  .inner {
    max-width: 1800px;
    margin: 0 auto;
  }
  position: relative;
  background: $primary-color;
  padding: 1%;
  color: white;
  & > * { line-height: 2.2; }
  .column {
    font-size: 1.2em;
    display: inline-block;
    vertical-align: top;
    margin-right: 5%;
    .title {font-weight: bold}
    opacity: .9;
    a {
      text-decoration: none;
      color: inherit;
      display: block;
      opacity: .85;
      font-size: 85%;
      img {
        color: white;
        width: 1em;
      }
    }
    &.copyright {
      display: block;
      padding-top: 30px;
      opacity: .7;
    }
    &.social {
      float: right;
      margin-right: 0;
      font-size: 1.5em;
      text-align: right;
      line-height: 1;
      a {padding: 0.5em;}
    }
  }
}

.icon-small {
  width: 38px;
  margin-right: 15px;
}

#listings-arrow-left {
  left: -158px;
  top: 66px;
}

#listings-arrow-right {
  left: 374px;
  top: 66px;
}

.listings-arrow {
  position: absolute;
  width: 300px;
}

.simple-close {
  z-index: 10;
  cursor: pointer;
  @include close-button;
}

@media screen and (max-width: $breakpoint-medium) {
  &.listings-arrow {
    display: none;
  }

  .property-preview {
    width: 69%;
    opacity: 1;
    position: relative;
    font-size: 1.3em;
    overflow: scroll;
    &.selected {
      transform: scale(1);
    }
  }
}
@media screen and (max-width: $breakpoint-small) {
  body {
    font-size: .9em;
  }

  .nav-modal {
    .inner {
      .modal-logo {
        width: 36%;
      }
      ul.nav {
        margin-top: 42px;
      }
    }
  }

  .logo-upper-left {
    width: 46%;
    top: 18px;
    left: 14px;
  }

  .desktop-nav {
    display: none;
  }

  .mobile-nav {
    display: block;
  }

  #header-logo {
    height: 28px;
  }

  #contact-us {
    padding: 0;
    .contact-content {
      width: 100%;
      .contact-header {
        padding: 25px 0 0 0;
        text-align: center;
        background: rgba(255, 255, 255, 0.8);
      }
      .contact-body {
        padding: 12px 0 0 0;
        background: rgba(255, 255, 255, 0.8);
        > ul {
          padding: 0 0 17px 20px;
        }
      }
    }
  }
  .small-hidden {
    display: none;
  }

  .contact-us-modal {
    .contact-form {
      width: 100%;
      height: 100%;
      margin-top: -33px;
      .form {
        margin: 0;
        > p {
          padding-top: 20px;
        }
      }
    }
  }

  .home-intro-left {
    width: 100%;
  }

  .home-intro-right {
    width: 50%;
  }

  .services-info {
    width: 100%;
    .services-content {
      margin-left: 0;
    }
  }

  .services-row {
    display: block;
    .services-text {
      width: 100%;
    }
  }

  .services-img {
    display: none;
  }

  .property-preview {
    width: 90%;
  }

  #header-home {
   height: 80vh;
  }

  .home-intro {
    width: 80%;
    margin-top: 0;
    > div {
      padding: 10px;
    }
  }

  .nav {
    > li {
      display: block;
    }
  }

  #listings-sidebar {
    width: 90%;
  }

  #listings-info {
    width: 90%;
  }

  .ham-menu {
    height: 2em;
    width: 2em;
  }

  .services-info {
    width: 100%;
  }

  #contact-us {
    background-color: white;
    background-image: none;
    height: 340px;
    .contact-content {
      width: 100%;
      top: 0;
      left: 0;
      .contact-header {
        text-align: center;
      }
      .contact-body {
        padding: 0;
        > ul {
          padding-left: 20px;
        }
      }
    }
  }
  .footer {
    position: relative;
    background: $primary-color;
    padding: 2%;
    color: white;
    & > * { line-height: 2.2; }
    .column {
      display: block;
      margin-right: 5%;
      .title {font-weight: bold}
      margin-left: 5%;
      opacity: .9;
      &.copyright {
        margin-top: 10%;
        margin-left: 3%;
      }
      &.social {
        margin: 0;
        display: block;
        float: left;
        > a {
          float: left;
          padding-right: 2px;
        }
      }
      a {
        text-decoration: none;
        color: inherit;
        display: block;
        opacity: .85;
        img {
          color: white;
          width: 1em;
        }
      }
    }
  }
}
/**
 *  Do not remove the comment below. It's the markers used by gulp-inject to inject
 *  all your sass files automatically
 */
// injector
// endinjector

